--- a/styles.css
+++ b/styles.css
@@ -7,38 +7,42 @@
   font-family: 'Roboto', sans-serif;
 }
 
-
+body{
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgb(22, 22, 22);
+}
 
 .header{
   width: 100%;    
   height: 60px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  position: fixed;  
+  justify-content: center;
+  position: sticky; 
+  top: 0;
   background-color: rgb(22, 22, 22);
 }
 
-.nav-bar{
-  display: flex;
-  font-weight: 600;
+.menu{
+  text-align: center;
 }
-.nav-bar ul{
+.menu ul{
   display: flex;
-  flex-direction: row;
   gap: 20px;
   list-style: none;
 }
-.nav-bar a{
+.menu a{
+  display: block;
   color: #f5f5f5;
   text-decoration: none;
   position: relative;
-  padding: 0px 10px;
+  padding: 0 10px;
   letter-spacing: 1px;
   font-weight: 400;
 }
 
-.nav-bar a::after{
+.menu a::after{
   content: "";
   position: absolute;
   background-color: #f5f5f5;
@@ -50,11 +54,11 @@
   transition: 0.3s;
 }
 
-.nav-bar a:hover{
+.menu a:hover{
   color: #f5f5f5;
 }
 
-.nav-bar a:hover::after{
+.menu a:hover::after{
   width: 100%;
 }
 
@@ -62,19 +66,14 @@
   width: 100%;
 }
 
-.main{
+.content{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 100px 48px;
   gap: 48px;
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
-  background-color: rgb(22, 22, 22);
 }
-
 
 
 
