--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,67 @@ body{
   background-color: rgb(22, 22, 22);
 }
 
+header{
+  width: 100vw;
+  height: 60px;
+  background-color: rgb(22, 22, 22);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+}
+
+.nav-list{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 20px;
+}
+
+nav{
+  min-width: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+}
+
+a{
+  position: relative;
+  color: rgb(189, 189, 189);
+  text-decoration:none ;
+  padding: 0px 10px;
+}
+
+a::after{
+  content: "";
+  position: absolute;
+  background-color: #f5f5f5;
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: -10px;
+  transition: 0.3s;
+}
+
+a:hover{
+  color: #f5f5f5;
+}
+
+a:hover::after{
+  width: 100%;
+}
 
 
 .content{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   padding: 100px 48px;
   gap: 48px;
+  bottom: 0;
 }
-
 
 
 .card-container{
@@ -33,7 +83,7 @@ body{
   justify-content: center;
   gap: 38px;
   padding: 48px;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: #f5f5f5;
   box-shadow: 1px 1px 4px rgb(10, 10, 10);
 }
