--- a/styles.css
+++ b/styles.css
@@ -8,90 +8,38 @@
 }
 
 body{
-  min-height: 100vh;
-  width: 100%;
-  background-color: rgb(22, 22, 22);
-}
-
-header{
+  height: 100vh;
   width: 100vw;
-  height: 60px;
   background-color: rgb(22, 22, 22);
   display: flex;
+  padding: 50px;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-}
-
-.nav-list{
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  gap: 20px;
-}
-
-nav{
-  min-width: 600px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin: auto;
-}
-
-a{
-  position: relative;
-  color: rgb(189, 189, 189);
-  text-decoration:none ;
-  padding: 0px 10px;
-}
-
-a::after{
-  content: "";
-  position: absolute;
-  background-color: #f5f5f5;
-  height: 3px;
-  width: 0;
-  left: 0;
-  bottom: -10px;
-  transition: 0.3s;
-}
-
-a:hover{
+  gap: 48px;
   color: #f5f5f5;
 }
 
-a:hover::after{
-  width: 100%;
-}
 
-
-.content{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 100px 48px;
-  gap: 48px;
-  bottom: 0;
+a{
+  text-decoration:none ;
 }
 
 
 .card-container{
-  max-width: 700px;
+  width: 700px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 38px;
   padding: 48px;
   border-radius: 10px;
-  background-color: #f5f5f5;
-  box-shadow: 1px 1px 4px rgb(10, 10, 10);
+  background-color: transparent;
+  border: 1px solid #f5f5f5;
 }
-
 
 .me-container{
   display: flex;
-    align-items: center;
+  align-items: center;
   gap: 48px;
 }
 
@@ -120,11 +68,23 @@ a:hover::after{
 .social-medias{
   display: flex;
   gap: 10px;
+  background-color: #f5f5f5;
+  align-items: center;
+  justify-content: center;
+  height: 38px;
+  padding: 12px;
+  border-radius: 50px;
 }
 
 .social-medias img{
   width: 24px;
   height: 24px;
+}
+
+.social-medias img:hover{
+  width: 28px;
+  height: 28px;
+  transition: 0.2s;
 }
 
 .text-about-me{
