--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,14 +10,13 @@
 }
 
 body{
-  height: 100vh;
+  height: 100%;
   width: 100vw;
-  background-color: rgb(22, 22, 22);
-  display: flex;
-  padding: 50px;
-  flex-direction: column;
+  display:flex;
+  flex-direction:column;
   align-items: center;
-  gap: 58px;
+  background: linear-gradient( rgb(0, 0, 0) 0%, rgb(20, 20, 20) 75%);
+  padding: 50px;
   color: #f5f5f5;
 }
 
@@ -28,27 +27,14 @@ a{
 
 .card-container{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 48px;
-  padding: 48px;
-  border-radius: 1rem;
-  background-image: linear-gradient(rgb(0, 255, 157), rgb(38, 0, 255)),
-                    linear-gradient( rgb(0, 255, 157) 0%, rgb(38, 0, 255) 100%);
+  flex-direction: column;
+  gap: 28px;
 }
 
-
-.top{
-  display: flex;
-  gap: 48px;
-  align-items: flex-end;
-}
 
 #projects h1{
-  text-align: center;
   font-weight: 500;
-  margin-bottom: 28px;
 }
 
 .me-container{
@@ -60,25 +46,22 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 18px;
+  justify-content:center;
+  gap: 12px;
 } 
 
 .perfil-container h3{
   font-weight: 500;
 }
 
+
 .perfil-img{
   width: 168;
   height: 168px;
   border-radius: 100%;
-  box-shadow:
-  2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-  6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-  12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-  22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-  41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07)
-;
+  -webkit-box-shadow:0px 0px 300px 0px rgba(45,255,196,1);
+-moz-box-shadow: 0px 0px 300px 0px rgba(45,255,196,1);
+box-shadow: 0px 0px 300px 0px rgba(45,255,196,1);
 }
 
 
@@ -112,8 +95,8 @@ color: #f5f5f5;
 }
 
 .wrapper{
-  display: flex;
-  gap: 28px;
+  display: grid;
+  gap: 18px;
 }
 
 .grid{
@@ -127,33 +110,31 @@ color: #f5f5f5;
 
 .btn-project-link{
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 120px;
-  width: 120px;
-  padding: 14px;
+  width: 100%;
+  padding: 10px;
   font-weight: 500;
   border: none;
-  border-radius: 50%;
+  border: 1px solid  #f5f5f5;
+  border-radius: 10px;
+  background-color: transparent;
+  color: #f5f5f5;
   gap: 8px;
-  box-shadow:
-  2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-  6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-  12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-  22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-  41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-  100px 100px 80px rgba(0, 0, 0, 0.07);
+  cursor: pointer;
 }
 .btn-project-link:hover{
-  cursor: pointer;
-  background-color: rgb(0, 255, 157);
-  color: #f5f5f5;
+  -webkit-box-shadow:0px 0px 28px 0px rgba(45,255,196,1);
+-moz-box-shadow: 0px 0px 28px 0px rgba(45,255,196,1);
+box-shadow: 0px 0px 28px 0px rgba(45,255,196,1);
+transition: 0.4s;
 }
 
 .project-icon{
-  width: 48px;
-  height: 48px;
+  color: #f5f5f5;
+  width: 24px;
+  height: 24px;
 }
 
 
@@ -161,18 +142,20 @@ color: #f5f5f5;
   height: 100px;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 16px;
   font-weight: lighter;
   color: #f5f5f5;
   padding: 50px;
+  gap: 48px;
+  margin-top: 100px;
 }
 
-#projects, #technologies{
-  display: flex;
-  flex-direction: column;
-  gap: 28px;
+#projects{
+  min-width: 600px;
 }
+
 
 
