--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
 }
 
 body{
-  height: 100%;
+  min-height: 100vh;
   width: 100vw;
   display:flex;
   flex-direction:column;
@@ -27,8 +27,8 @@ a{
 
 .card-container{
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   gap: 28px;
 }
 
@@ -96,11 +96,13 @@ color: #f5f5f5;
 
 .wrapper{
   display: grid;
+  justify-content: center;
   gap: 18px;
 }
 
 .grid{
   display: grid;
+  gap: 18px;
   grid-template-columns: repeat(9, 1fr);
 }
 
@@ -113,7 +115,7 @@ color: #f5f5f5;
   justify-content: center;
   align-items: center;
   height: 120px;
-  width: 100%;
+  width: 600px;
   padding: 10px;
   font-weight: 500;
   border: none;
@@ -157,5 +159,12 @@ transition: 0.4s;
   min-width: 600px;
 }
 
-
+@media(max-width: 768px){
+  .btn-project-link{
+    width: 300px;
+  }
+  .grid{
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
