--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@
 body{
   min-height: 100vh;
   width: 100vw;
-  display:flex;
-  flex-direction:column;
+  display: grid;
+  place-content: center;
   align-items: center;
   background: linear-gradient( rgb(0, 0, 0) 0%, rgb(20, 20, 20) 75%);
   padding: 50px;
@@ -47,7 +47,7 @@ a{
   flex-direction: column;
   align-items: center;
   justify-content:center;
-  gap: 12px;
+  gap: 18px;
 } 
 
 .perfil-container h3{
@@ -67,7 +67,7 @@ box-shadow: 0px 0px 300px 0px rgba(45,255,196,1);
 
 .social-medias{
   display: flex;
-  gap: 10px;
+  gap: 18px;
   align-items: center;
   justify-content: center;
   height: 38px;
@@ -90,20 +90,20 @@ color: #f5f5f5;
 
 
 .dev-icon{
-  height: 48px;
-  width: 48px;
+  height: 24px;
+  width: 24px;
 }
 
 .wrapper{
-  display: grid;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   gap: 18px;
+  justify-content: center;
 }
 
-.grid{
-  display: grid;
+.techs-icons{
+  display: flex;
   gap: 18px;
-  grid-template-columns: repeat(9, 1fr);
 }
 
 .wrapper a{
@@ -135,8 +135,8 @@ transition: 0.4s;
 
 .project-icon{
   color: #f5f5f5;
-  width: 24px;
-  height: 24px;
+  width: 18px;
+  height: 18px;
 }
 
 
@@ -152,7 +152,7 @@ transition: 0.4s;
   color: #f5f5f5;
   padding: 50px;
   gap: 48px;
-  margin-top: 100px;
+  margin-top: 70px;
 }
 
 #projects{
