--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@
 body{
   min-height: 100vh;
   width: 100vw;
-  display: grid;
-  place-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   background: linear-gradient( rgb(0, 0, 0) 0%, rgb(20, 20, 20) 75%);
   padding: 50px;
@@ -97,12 +97,14 @@ color: #f5f5f5;
 .wrapper{
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  align-items: center;
   justify-content: center;
+  gap: 18px;
 }
 
 .techs-icons{
   display: flex;
+  justify-content: center;
   gap: 18px;
 }
 
@@ -115,7 +117,7 @@ color: #f5f5f5;
   justify-content: center;
   align-items: center;
   height: 120px;
-  width: 600px;
+  min-width: 600px;
   padding: 10px;
   font-weight: 500;
   border: none;
@@ -141,30 +143,32 @@ transition: 0.4s;
 
 
 .footer{
-  height: 100px;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100px;
   font-size: 16px;
   font-weight: lighter;
   color: #f5f5f5;
-  padding: 50px;
   gap: 48px;
   margin-top: 70px;
 }
 
-#projects{
+/* #projects{
   min-width: 600px;
-}
+} */
 
 @media(max-width: 768px){
   .btn-project-link{
-    width: 300px;
-  }
-  .grid{
-    grid-template-columns: repeat(4, 1fr);
+    min-width: 300px;
   }
 }
 
+@media (max-width: 450px){
+  .techs-icons{
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+  }
+}
