--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,8 @@
 
 body{
   min-height: 100vh;
-  width: 100vw;
+  width: fit-content;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
